crates/kernel/tests/table/snapshots/main__table__router__the_remotes_next_and_prev_walk_the_playlist.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            Next,
        ),
        [
            Audio(
                Stop,
            ),
            Audio(
                Load(
                    TrackLoad {
                        media: Local(
                            "/tmp/track1.flac",
                        ),
                        decibels: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Library(
                Disk(
                    AppendHistory(
                        HistoryEntry {
                            track_source: Local(
                                "/tmp/track1.flac",
                            ),
                            title: "track1",
                            artist: None,
                            played_at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track1.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track_number: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                decibels: None,
                            },
                            display: "track1.flac",
                            tagging: Tagged(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading(
            Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track1.flac",
                tagging: Tagged(
                    100s,
                ),
            },
        ),
        None,
        Cursor {
            index: 1,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Playback(
            Previous,
        ),
        [
            Audio(
                Stop,
            ),
            Audio(
                Load(
                    TrackLoad {
                        media: Local(
                            "/tmp/track0.flac",
                        ),
                        decibels: None,
                        revision: Revision(
                            2,
                        ),
                    },
                ),
            ),
            Library(
                Disk(
                    AppendHistory(
                        HistoryEntry {
                            track_source: Local(
                                "/tmp/track0.flac",
                            ),
                            title: "track0",
                            artist: None,
                            played_at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track0.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track_number: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                decibels: None,
                            },
                            display: "track0.flac",
                            tagging: Tagged(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading(
            Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
        ),
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
]
