crates/kernel/tests/table/snapshots/main__table__router__the_remotes_pause_pauses.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            Pause,
        ),
        [
            Audio(
                SetPlayback(
                    Paused,
                ),
            ),
            Macos(
                SetPlayback(
                    Paused,
                ),
            ),
            Animate(
                PlaybackChanged(
                    Pause,
                ),
            ),
        ],
        Paused {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            position: 0ns,
            by: Listener,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
]
