crates/kernel/tests/table/snapshots/main__table__router__the_remotes_play_pause_flips.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            Toggle,
        ),
        [
            Audio(
                Stop,
            ),
            Audio(
                Load(
                    TrackLoad {
                        path: "/tmp/track0.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Library(
                AppendHistory(
                    HistoryEntry {
                        track: Local(
                            "/tmp/track0.flac",
                        ),
                        title: "track0",
                        artist: None,
                        at: Moment(
                            0ns,
                        ),
                    },
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track0.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track0",
                            tagging: Listed(
                                None,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading(
            Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0",
                tagging: Listed(
                    None,
                ),
            },
        ),
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            Loaded(
                None,
            ),
        ),
        [
            Macos(
                SetPosition(
                    0ns,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0",
                tagging: Listed(
                    None,
                ),
            },
            playhead: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            Toggle,
        ),
        [
            Audio(
                SetPlayback(
                    Paused,
                ),
            ),
            Macos(
                SetPlayback(
                    Paused,
                ),
            ),
            Animate(
                PlaybackChanged(
                    Pause,
                ),
            ),
        ],
        Paused {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0",
                tagging: Listed(
                    None,
                ),
            },
            position: 0ns,
            by: Listener,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
