crates/kernel/tests/table/snapshots/main__table__router__the_remotes_play_starts_a_stopped_player_and_leaves_a_playing_one.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 366
expression: "walked(model, messages)"
---
[
    (
        Playback(
            Play,
        ),
        Batch(
            [
                Audio(
                    Stop,
                ),
                Audio(
                    Load(
                        TrackRequest {
                            path: "/tmp/track0.flac",
                            gain: None,
                            revision: Revision(
                                1,
                            ),
                        },
                    ),
                ),
                Library(
                    AppendHistory(
                        HistoryEntry {
                            path: "/tmp/track0.flac",
                            title: "track0",
                            artist: None,
                            at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
                Macos(
                    NowPlaying(
                        Some(
                            Track {
                                path: "/tmp/track0.flac",
                                duration: None,
                                tags: Tags {
                                    title: None,
                                    artist: None,
                                    album: None,
                                    album_artist: None,
                                    date: None,
                                    genre: None,
                                    track: None,
                                    track_total: None,
                                    disc: None,
                                    composer: None,
                                    comment: None,
                                    lyrics: None,
                                },
                                audio_format: AudioFormat {
                                    format: None,
                                    bitrate_kbps: None,
                                    sample_rate_hz: None,
                                    bits_per_sample: None,
                                    channels: None,
                                    replay_gain: None,
                                },
                                display: "track0",
                                tagging: Listed,
                            },
                        ),
                    ),
                ),
                Audio(
                    Playback(
                        Playing,
                    ),
                ),
                Macos(
                    PlaybackState(
                        Playing,
                    ),
                ),
                Animate(
                    TrackChanged,
                ),
                Animate(
                    PlaybackChanged(
                        Play,
                    ),
                ),
            ],
        ),
        Loading {
            track: Track {
                path: "/tmp/track0.flac",
                duration: None,
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0",
                tagging: Listed,
            },
            at: 0ns,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Audio(
            Loaded {
                total: None,
            },
        ),
        One(
            Macos(
                PlaybackPosition(
                    0ns,
                ),
            ),
        ),
        Playing {
            track: Track {
                path: "/tmp/track0.flac",
                duration: None,
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0",
                tagging: Listed,
            },
            head: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Playback(
            Play,
        ),
        None,
        Playing {
            track: Track {
                path: "/tmp/track0.flac",
                duration: None,
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0",
                tagging: Listed,
            },
            head: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
]
